# qgsw

./: .gitignore  .pre-commit-config.yaml  Makefile  OAR.SurfML-nopert-[32 96 64 192].3549549.stderr  OAR.SurfML-nopert-[32 96 64 192].3549549.stdout  README.md  _makefile  assimilation.sh  environment-g5000.yml  environment-g5000_.yml  environment-local.yml  environment.yml  noxfile.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  ruff.toml  run.sh  run_var_analysis.sh  run_var_analysis_psi2_reg.sh
.streamlit/: config.toml
config/: assimilation.toml  assimilation_sw_colfilt.toml  assimilation_sw_colfilt_40.toml  assimilation_sw_colfilt_uniform.toml  assimilation_sw_qg_1_5l.toml  assimilation_sw_qg_1l.toml  assimilation_sw_qg_2l.toml  assimilation_sw_qg_3l.toml  compare_models.toml  doublegyre.toml  doublegyre_2l.toml  doublegyre_sw_long_hr.toml  enatl60.toml  plot_comparison.toml  plot_profile.toml  realistic.toml  retrieve_run_metrics.toml  run.toml  run_model.toml  save_plots.toml  single_model_vortex.toml  single_vs_double_layers.toml  sw_double_gyre_HR.toml  variational_analysis.toml  vortexshear.toml
dashboard/: main.py
data/: coefficients.npz
envs/: environment-nox.yml
notebooks/: assimilation_sandbox.ipynb  autocorrelation.ipynb  comparison.ipynb  discrete_laplacian.ipynb  enatl60_results.ipynb  enatl60_results_article.ipynb  fields_comparison.ipynb  forecast.ipynb  inhomogeneous_boundary_condition.ipynb  inhomogenous_boundary_condition.ipynb  mean_flow.ipynb  optim_results.ipynb  optim_results_pv.ipynb  oral_presentation.ipynb  plots.ipynb  signal_processing.ipynb  solver.ipynb  sublayer.ipynb  tmp.ipynb  tmp_.ipynb  va_results.ipynb  va_results_article.ipynb  va_results_nopert.ipynb  va_results_perturbed.ipynb  variational_analysis.ipynb
scripts/: .variational_analysis_forced_rg_dr_reg.py.swp  _variational_analysis_mixed_ro.py  assimilation.py  compare_models.py  create_vortex.py  doublegyre.py  monitor_model.py  plot_comparison.py  plot_g5k_results.py  plot_g5k_results_single.py  plot_profile.py  realistic.py  retrieve_run_consumption.py  retrieve_run_metrics.py  run.py  run_model.py  run_model_similar.py  save_plots.py  single_model_vortex.py  single_vs_double_layers.py  variational_analysis.py  variational_analysis_2l.py  variational_analysis_alpha.py  variational_analysis_enatl60.py  variational_analysis_enatl60_atmp.py  variational_analysis_enatl60_atmp_hr.py  variational_analysis_enatl60_atmp_sparse.py  variational_analysis_enatl60_forced.py  variational_analysis_forced.py  (+48 more)
(+527 files in other folders)
