[project]
name = "qgsw"
version = "0.1.0"
description = ""
authors = [{name="Gaétan Rigaut, email=<gaetanrigaut.s@.com>"}, {name="Louis Thiry"}]
readme = "README.md"
requires-python = ">=3.9"


[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 79
target-version = "py311"
extend-exclude = ["*.ipynb"]
select = ["ALL"]
ignore = [
    # missing-trailing-comma (COM812)
    "COM812",
    #no-blank-line-before-class
    "D211",
    #multi-line-summary-second-line
    "D213",
    # flake8-boolean-trap
    "FBT",
    # bandit
    "S",
    # flake8-logging
    "G",
    # flake8-print
    "T",
    # McCabe complexity
    "C901",
    # do not assign a lambda expression, use a def
    "E731",
    # implicit-namespace-package
    "INP001",
    # single-line-implicit-string-concatenation
    "ISC001",
    # Too many arguments to function call
    "PLR0913",
    # Missing type annotation for `self` in method
    "ANN101",
    # suppressible-exception
    "SIM105",
]
unfixable = [
    # Remove unused-imports
    "F401",
    # Variable assigned but never used
    "F841",
    # Use {key} in {dict} instead of {key} in {dict}.keys()
    "SIM118",
    # move to type-checking block
    "TCH003",
    # found comented-out code
    "ERA001",
]