[project]
name = "qgsw"
version = "4.4.0"
description = ""
authors = [{name="Gaétan Rigaut, email=<gaetanrigaut.s@.com>"}, {name="Louis Thiry"}]
readme = "README.md"
requires-python = ">=3.9"


[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 79
target-version = "py39"
extend-exclude = ["*.ipynb"]
lint.select = ["ALL"]
lint.ignore = [
    # bandit
    "S",
    # do not assign a lambda expression, use a def
    "E731",
    # implicit-namespace-package
    "INP001",
    # Too many arguments to function call
    "PLR0913",
    # Missing type annotation for `self` in method
    "ANN101",
    # Missing type annotation for `cls` in classmethod
    "ANN102",
]
lint.unfixable = [
    # Remove unused-imports
    "F401",
    # Variable assigned but never used
    "F841",
    # Use {key} in {dict} instead of {key} in {dict}.keys()
    "SIM118",
    # move to type-checking block
    "TCH003",
    # found comented-out code
    "ERA001",
]
[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
testpaths = ["tests"]